--- a/search-donor.html
+++ b/search-donor.html
@@ -119,15 +119,16 @@
     import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-database.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyCmqaVqnU6g0HpvOkTrmnNYyzZjvLI6TNQ",
-      authDomain: "blood-line-75626.firebaseapp.com",
-      databaseURL: "https://blood-line-75626-default-rtdb.firebaseio.com/",
-      projectId: "blood-line-75626",
-      storageBucket: "blood-line-75626.appspot.com",
-      messagingSenderId: "234449502872",
-      appId: "1:234449502872:web:452509dbb093e040ff46ed",
-      measurementId: "G-HC9NW9NBMQ"
-    };
+  apiKey: process.env.FIREBASE_API_KEY,
+  authDomain: process.env.FIREBASE_AUTH_DOMAIN,
+  databaseURL: process.env.FIREBASE_DB_URL,
+  projectId: process.env.FIREBASE_PROJECT_ID,
+  storageBucket: process.env.FIREBASE_STORAGE_BUCKET,
+  messagingSenderId: process.env.FIREBASE_MSG_SENDER_ID,
+  appId: process.env.FIREBASE_APP_ID,
+  measurementId: process.env.FIREBASE_MEASUREMENT_ID
+};
+
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
